# QT_6

./: CMakeLists.txt  main.cpp
lib/: mainwindow.cpp
